debug wrong spell

--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -353,7 +353,7 @@
 	                                mid = mid.replace('filename','');
 	                                mid = mid.replace('orderdate','');
 	                                mid = mid.replace('orderplace','');
-	                                mid = mid.replace('orderstaus','');
+	                                mid = mid.replace('orderstatus','');
 	                                var order=document.createElement("r");
 	                                order.innerHTML=mid;
 	
