change cancel and back button

--- a/app/templates/confirm.html
+++ b/app/templates/confirm.html
@@ -18,11 +18,14 @@
 <body>
 <!--导航栏-->
     <header class="bar bar-nav">
-        <a class="button button-link button-nav pull-left back" href="/">
-            <span class="icon icon-left" style="">返回</span>
+        <a class="button button-link button-nav pull-left back" href="/select">
+            <span class="icon icon-left" style="font-size: .8rem">返回</span>
         </a>
-        <h1 class="title"></h1>
+        <a class="button button-link button-nav pull-right" href="/">
+            <font color=crimson>取消</font>
+        </a>
     </header>
+    <br>
     <header class='demos-header'>
         <h1 class="demos-title">确认订单</h1>
     </header>
