--- a/app/templates/select.html
+++ b/app/templates/select.html
@@ -38,7 +38,7 @@
   	<!--导航栏-->
 	  <header class="bar bar-nav">
 	    <a class="button button-link button-nav pull-left back" href="/">
-	      <span class="icon icon-left" style="">返回</span>
+	      <span class="icon icon-left" style="font-size: .8rem">返回</span>
 	    </a>
 	    <h1 class="title"></h1>
 	  </header>
