--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../static/mycss/demos.css">
     <link rel="stylesheet" href="../static/css/light7.css">
     <link rel="stylesheet" href="../static/css/app.css">
+    <link href="../static/lib/swiper.css" rel="stylesheet">
+    <script src="../static/lib/jquery-2.1.4.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
     
    	<style>
    		.weui-form-preview{
@@ -101,17 +104,37 @@
 	                <a href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel" style="color: white;">取消</a>
 	            </div>
 				<!--幻灯片-->
-			    <div class="swiper-container" style="margin-bottom: -10px;" >
-			      <!-- Additional required wrapper -->
-			      <div class="swiper-wrapper">
-			        <!-- Slides -->
-			        <div class="swiper-slide"><img src="/static/images/bg3.jpg" /></div>
-			        <div class="swiper-slide"><img src="/static/images/bg7.jpg" /></div>
-			        <div class="swiper-slide"><img src="/static/images/bg6.jpg"/></div>
-			      </div>
-			      <!-- If we need pagination -->
-			      <div class="swiper-pagination"></div>
-			    </div>
+                <div class="swiper-container" style="margin-bottom: -10px;">
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img src="../static/images/bg4.jpg" alt="...">
+                            </div>
+                            <div class="item">
+                                <img src="../static/images/bg7.jpg" alt="...">
+                            </div>
+                            <div class="item">
+                                <img src="../static/images/bg5.jpg" alt="...">
+                            </div>
+                        </div>
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only"></span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only"></span>
+                        </a>
+                    </div>
+                </div>
 				<!--九宫格-->
 			    <div class="weui-grids" style="background-color: #EEEEEE;border-top-left-radius: 1em;border-top-right-radius: 1em;z-index: 999;">
 			      <a href="/detailedu" class="weui-grid js_grid">
