--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,9 +18,37 @@
             height: 45px;
         }
         html,body{ overflow:hidden;}
+        .form-login{
+            border: 1px solid #ddd;
+            border-top-color: rgb(221, 221, 221);
+            border-top-style: solid;
+            border-top-width: 1px;
+            border-right-color: rgb(221, 221, 221);
+            border-right-style: solid;
+            border-right-width: 1px;
+            border-bottom-color: rgb(221, 221, 221);
+            border-bottom-style: solid;
+            border-bottom-width: 1px;
+            border-left-color: rgb(221, 221, 221);
+            border-left-style: solid;
+            border-left-width: 1px;
+            border-image-source: initial;
+            border-image-slice: initial;
+            border-image-width: initial;
+            border-image-outset: initial;
+            border-image-repeat: initial;
+            border-radius: 4px;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+            border-bottom-left-radius: 4px;
+        }
+        .icon-back{
+
+        }
     </style>
 </head>
-<body id="main" style="height: 100%;background-color: #2c2a2a ">
+<body id="main" style="height: 100%;background-color: white ">
     <div id="">
         <script src="../static/lib/jquery-2.1.4.js"></script>
         <script src="../static/lib/fastclick.js"></script>
@@ -31,26 +59,30 @@
             var time_now = '{{ now }}'
             var flag = '{{ flag }}'
         </script>
-        {#    <div style="background: url(../static/images/login.jpg); background-size:100% 100%; height: 639px">#}
-        <div class="weui-flex" style="margin-top: 10%; margin-left: 12%">
-            <img src="/static/font/logo.jpg" style="width: 60px;height: 60px;margin-right: 10px">
-            <div class="weui-flex__item">
-                <h2 style="font-family: 方正兰亭超细黑简体; color: white">道墨云印</h2>
-                <h6 style="font-family: '等线 Light'; color: white">远程打印，免排队自取</h6>
-            </div>
+
+        <!--导航栏-->
+        <header class="bar bar-nav" style="background-color: rgb(229,229,229,0.66)">
+            <a class="button button-link button-nav pull-left" href="/" style="margin-top: 8.96px;margin-bottom: 8.97px">
+                <img src="../static/font/back.png" style="height: 30px;width: 30px;">
+            </a>
+        </header>
+
+        <div class="text-center" style="margin-top: 18%;margin-bottom: 8%">
+            <img src="../static/font/logo2.png" style="width: 4rem;height: 4rem">
         </div>
         <form method="post" id="my-form" name="my-form">
-            <div class="weui-cells weui-cells_form" style="background-color: rgba(52,50,50,1); margin-left: 30px;margin-right: 30px; margin-top: 7%">
+            <div class="weui-cells weui-cells_form form-login" style="background-color: white; margin-left: 30px;margin-right: 30px; margin-top: 0%">
 
                 <div class="weui-cell weui-cell_vcode" style="height: 50px;">
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="tel" name="tel" placeholder="请输入手机号" required="required" style="color: white">
+                        <input class="weui-input" type="tel" name="tel" placeholder="请输入手机号" required="required" style="color: #9b9aa0">
                     </div>
                 </div>
-
+            </div>
+            <div class="weui-cells weui-cells_form form-login" style="background-color: white; margin-left: 30px;margin-right: 30px; margin-top: 1%">
                 <div class="weui-cell weui-cell_vcode" style="height: 50px">
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="password" name="password" placeholder="请输入密码" required="required" style="color: white" >
+                        <input class="weui-input" type="password" name="password" placeholder="请输入密码" required="required" style="color: #9b9aa0" >
                     </div>
                 </div>
             </div>
