update login page

--- a/app/templates/confirm.html
+++ b/app/templates/confirm.html
@@ -55,7 +55,7 @@
         </div>
 
         <div>
-            <form method="post" action="/pay">
+            <form method="post" action="/pay2">
                 <input type="hidden" name="filename" value="{{ data["new_filename"] }}">
                 <input type="hidden" name="place" value="{{ data["place"] }}">
                 <input type="hidden" name="copies" value="{{ data["copies"] }}">
