--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -112,7 +112,7 @@
 			          <img src="../static/images/print.png" alt="">
 			        </div>
 			        <p class="weui-grid__label">
-			          	打印入口
+			          	手机打印
 			        </p>
 			      </a>
 			      <a href="/docshare" class="weui-grid js_grid">
@@ -123,12 +123,12 @@
 			          	资料共享
 			        </p>
 			      </a>
-			      <a href=" " class="weui-grid js_grid">
+			      <a href="/select2" class="weui-grid js_grid">
 			        <div class="weui-grid__icon">
 			          <img src="../static/images/serve.png" alt="">
 			        </div>
 			        <p class="weui-grid__label">
-			          	其他服务
+			          	电脑打印
 			        </p>
 			      </a>			      			      
 			    </div>
