update index img

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -85,7 +85,7 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img src="../static/images/bg3.jpg" alt="...">
+                                <img src="../static/img/action1.jpg" alt="...">
                             </div>
                             <div class="item">
                                 <img src="../static/images/bg6.jpg" alt="...">
